fine tuning againnnnn
